# adflux

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: architecture.md  design.md  e2e-testing.md  extending.md  fidelity-matrix.md  options.md  profiles.md  usage.md
examples/: README.md  adf_to_markdown.py  confluence_roundtrip.py  extensions.md  md_to_adf.py  sample.adf.json
src/adflux/: __init__.py  api.py  cli.py  errors.py  logging.py  options.py  profiles.py
src/adflux/formats/: __init__.py
src/adflux/formats/adf/: __init__.py  mapping.py  mapping.yaml  reader.py  schema.py  writer.py
src/adflux/formats/adf/schema/: adf-minimal.schema.json
src/adflux/formats/markdown/: __init__.py  pretty.py  reader.py  writer.py
src/adflux/formats/panflute_fmt/: __init__.py
src/adflux/ir/: __init__.py  envelope.py  profile_filter.py
tests/: conftest.py
tests/e2e/: __init__.py  compare.py  confluence_client.py  conftest.py  jira_client.py  test_confluence_roundtrip.py  test_jira_roundtrip.py
tests/e2e/fixtures/: basic.md  inline-macros.md  layouts.md  mixed.md  panels.md  smart-cards.md  task-decision-lists.md
tests/integration/: test_end_to_end.py
tests/roundtrip/: test_adf_property.py  test_adf_roundtrip.py  test_node_coverage.py  test_table_roundtrip.py
tests/unit/: test_adf_reader.py  test_adf_schema.py  test_adf_writer.py  test_edge_cases.py  test_envelope.py  test_mapping_loader.py  test_panflute_format.py  test_profile_filter.py  test_profiles.py
